# bdsj

./: Cargo.toml  README.md  draft.md  index.html
client/: .env.development  .env.production  .prettierrc  Cargo.toml  index.html  makefile  package-lock.json  package.json
client/src/: App.tsx  api.ts  config.ts  index.css  lib.rs  main.tsx
client/src/components/: LinkButton.tsx  ListView.tsx  Loader.tsx  PopupInterface.d.ts  TextProp.tsx  Tile.tsx
client/src/helpers/: lists.ts  promises.ts
client/src/layouts/: centered.tsx  grid-list.tsx
client/src/routes/: choice_panel.tsx  countries.tsx  country.tsx  home.tsx  location.tsx  locations.tsx  notFound.tsx  person.tsx  persons.tsx  round.tsx  tournament.tsx  tournaments.tsx
client/src/state/: context.tsx  global.tsx  hooks.tsx
client/src/views/country/: DeletePopup.tsx
client/src/views/location/: DeletePupup.tsx
client/src/views/person/: DeletePopup.tsx
client/src/views/tournament/: AddCountryParticipation.tsx  AddParticipant.tsx  AddPerson.tsx  Stage.tsx
server/: .env  Cargo.toml
server/migrations/2022-10-28-155538_create_tables/: ownership.sql  up.ql.sql  up.sql
server/migrations/create_tables/: down.sql  up.ql  up.ql.sql  up.sql
server/src/: api_response.rs  database.rs  main.rs  router.rs  schema.rs
server/src/funcs/: auth.rs  filter.rs
server/src/models/: count.rs  country.rs  disqualification.rs  jump.rs  lim.rs  location.rs  mod.rs  participant.rs  person.rs  position.rs  round.rs  tournament.rs
server/src/routes/: auth.rs  countries.rs  end_session.rs  health.rs  mod.rs  not_found.rs
(+67 files in other folders)
