[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15.6"
rocket = "0.5.0-rc.2"
# common = { version = "0.1.0", path = "../common" }
cgi = "0.6.0"
http = "0.2.8"
querystring = "1.1.0"
serde_json = "1.0.87"
serde = "1.0.147"
chrono = "0.4.22"
