[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15.6"
# common = { version = "0.1.0", path = "../common" }
cgi = "0.6.0"
http = "0.2.8"
querystring = "1.1.0"
serde_json = "1.0.87"
serde = "1.0.147"
chrono = { version = "0.4.22", features = ["serde"] }
async-trait = "0.1.60"
 